# tensordraw

./: .gitignore  README.md  install.sh  pyproject.toml  unistall.sh
examples/: all_to_all_random_unitary.py  brickwork_circuit.py  convert_to_png.sh  logo.py  mat_vec_mult.py  random_network.py
tensordraw/: __init__.py  _drawable.py  _placeable.py  color.py  contraction.py  figure.py  fill_style.py  latex.py  leg.py  stroke_style.py  utils.py
tensordraw/tensors/: __init__.py  _base_tensor.py  circle.py  holed_polygon.py  leg.py  polygon.py  rectangle.py  regular_polygon.py  square.py  star.py  triangle.py
