[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensordraw"
version = "0.0.1"
authors = [
{ name="Hugo Lóio"},
]

description = "A package to easily draw 2D tensor network diagrams"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "pycairo",
  "numpy"
]

#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"
